indexd_ffi/examples/python/indexd.py

_UniffiLib.ffi_indexd_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_indexd_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_i16.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_indexd_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_i16.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_indexd_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_u32.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_indexd_rust_future_free_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_u32.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_indexd_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_i32.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_indexd_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_i32.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_indexd_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_u64.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_indexd_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_u64.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_indexd_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_i64.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_indexd_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_i64.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_indexd_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_f32.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_indexd_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_f32.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_indexd_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_f64.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_indexd_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_f64.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_indexd_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_indexd_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_pointer.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_indexd_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_indexd_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_indexd_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_poll_void.restype = None
_UniffiLib.ffi_indexd_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_cancel_void.restype = None
_UniffiLib.ffi_indexd_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_indexd_rust_future_free_void.restype = None
_UniffiLib.ffi_indexd_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_indexd_rust_future_complete_void.restype = None
_UniffiLib.uniffi_indexd_checksum_func_set_log_callback.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_func_set_log_callback.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_app_connect.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_app_connect.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_app_upload.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_app_upload.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_chunkedbuffer_close.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_chunkedbuffer_close.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_chunkedbuffer_push_chunk.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_chunkedbuffer_push_chunk.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_logger_debug.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_logger_debug.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_logger_info.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_logger_info.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_logger_warn.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_logger_warn.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_logger_error.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_logger_error.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_upload_finish.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_upload_finish.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_method_upload_write.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_method_upload_write.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_constructor_app_new.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_constructor_app_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_indexd_checksum_constructor_chunkedbuffer_new.argtypes = (
)
_UniffiLib.uniffi_indexd_checksum_constructor_chunkedbuffer_new.restype = ctypes.c_uint16
_UniffiLib.ffi_indexd_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_indexd_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.
# Magic number for the Rust proxy to call using the same mechanism as every other method,
# to free the callback once it's dropped by Rust.
_UNIFFI_IDX_CALLBACK_FREE = 0
# Return codes for callback calls
_UNIFFI_CALLBACK_SUCCESS = 0
_UNIFFI_CALLBACK_ERROR = 1
_UNIFFI_CALLBACK_UNEXPECTED_ERROR = 2

class _UniffiCallbackInterfaceFfiConverter:
    _handle_map = _UniffiHandleMap()

    @classmethod
    def lift(cls, handle):
        return cls._handle_map.get(handle)

    @classmethod
    def read(cls, buf):
        handle = buf.read_u64()
        cls.lift(handle)

    @classmethod
    def check_lower(cls, cb):
        pass

    @classmethod
    def lower(cls, cb):
        handle = cls._handle_map.insert(cb)
        return handle

    @classmethod
    def write(cls, cb, buf):
        buf.write_u64(cls.lower(cb))

class _UniffiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError("a bytes-like object is required, not {!r}".format(type(value).__name__))

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)









